--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node/src/index.js",
+    "start": "node index.js",
     "dev": "nodemon src/index.js",
-    "lint": "eslint src "
+    "lint": "eslint src ",
+    "heroku-postbuild": "cd src/client && npm install && yarn build"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,5 @@
     "helmet": "^3.21.3",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1"
-  },
-  "heroku-postbuild": "cd src/client && npm install && npm run build"
+  }
 }
