--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "acorn": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "minimist": "^1.2.5",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1"
   },
